# metric-dynamics

./: .gitignore  LICENSE  README.md  eda.ipynb  feature-label-map.json  logger.py  parse.py  process_data.py  pyproject.toml  schedule.py
data/: commit_metrics_bleed-baidu-white.csv  commit_metrics_ml_proj2022.csv  commit_metrics_python-nvd3.csv  pypi_top_1000.csv
data/results/: Adafruit_CircuitPython_BusDevice.csv  Adafruit_CircuitPython_Register.csv  Adafruit_Python_PureIO.csv  AttrDict.csv  Automat.csv  Box.csv  CircularDependencyA.csv  CircularDependencyB.csv  ConfigArgParse.csv  Math-Py.csv  PyInquirer.csv  PySimpleGUI.csv  _all_results.csv  abseil-py.csv  ae_core.csv  aiodns.csv  alabaster.csv  anytree.csv  apispec.csv  appdirs.csv  args.csv  asgiref.csv  asn1crypto.csv  async_generator.csv  async_timeout.csv  asyncpg.csv  attrs.csv  aws-cfn-template-flip.csv  backoff.csv  backports.functools_lru_cache.csv  backports.os.csv  backports_abc.csv  base58.csv  bcrypt.csv  beautifultable.csv  bidict.csv  boolean.py.csv  bunch.csv  bz2file.csv  cached-property.csv  (+192 more)
data/results/tiny/: bleed-baidu-white.csv  ml_proj2022.csv  portfolio-API.csv  test-radon-results-cc.json  test-radon-results-hc.json  test-radon-results-mi.json  test-radon-results-raw-metrics.json
data/url/: pypi_top_1000.csv  urls_tiny.csv
