[tool.poetry]
name = "metric-dynamics"
version = "0.1.0"
description = ""
authors = ["qwerltaz <msmarcinpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydriller = "^2.6"
pandas = "^2.2.0"
gitpython = "^3.1.42"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
