[tool.poetry]
name = "metric-dynamics"
version = "0.1.0"
description = ""
authors = ["qwerltaz <msmarcinpl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydriller = "^2.6"
pandas = "^2.2.0"
gitpython = "^3.1.42"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
radon = "^6.0.1"
notebook = "^7.1.3"
lightgbm = "^4.3.0"
scikit-learn = "^1.4.2"
shap = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
